Change directory to the TruffleRuby repo before running git for build information